Avancement Squelette HTML CSS

--- a/index.html
+++ b/index.html
@@ -42,9 +42,6 @@
                             <a class="nav-link" href="#">Album</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="panier.html">Panier</a>
                         </li>
                     </ul>
@@ -54,16 +51,16 @@
         <div class="container">
             <div class="row mb-4">
                 <div class="col">
-                    <div id="carouselControls" class="carousel slide" data-ride="carousel">  <!--carouselControls pour le suivant et précédant-->
+                    <div id="carouselControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
-                           <div class="carousel-item active">  <!--active obligatoire pour indiquer le premier élément-->
-                              <img src="images/carousel_1.jpg" class="d-block w-100 h-50" alt="Un homme qui réfléchi devant l'ordinateur."> <!--d-block affiche l'élément sur tout l'espace disponbile (une boite), w-100 est la width (100, 75, 50, 25, ou auto). Les deux class permettent d'éviter l'alignement par défaut-->
+                           <div class="carousel-item active">
+                              <img src="images/carousel_1.jpg" class="d-block w-100" alt="Un ours en peluche dans l'herbe.">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/carousel_2.jpg" class="d-block w-100 h-50" alt="Une dame qui travaille sur un ordinateur.">
+                              <img src="images/carousel_2.jpg" class="d-block w-100" alt="Une ours en peluche sur le sol, dans le coin d'une fenêtre.">
                            </div>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">   <!--href relie à la div parent du carousel-->
+                        <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                            <span class="sr-only">Précédent</span>
                         </a>
@@ -72,6 +69,50 @@
                            <span class="sr-only">Suivant</span>
                         </a>
                      </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-4">
+                    <div class="card mb-4 mb-lg-0 border-primary shadow">
+                        <img src="images/teddy_5.jpg" alt="image certification" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Qualité</h5>
+                            <p class="card-text">Chaque ours en peluche est d'une qualité sans pareil.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="card mb-4 mb-lg-0 border-primary shadow">
+                        <img src="images/teddy_2.jpg" alt="Image d'instruction" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Made in France</h5>
+                            <p class="card-text">Des matières premières, jusqu'à la chaîne de production, tout se passe en France.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-4">
+                    <div class="card mb-4 mb-lg-0 border-primary shadow">
+                        <img src="images/teddy_4.jpg" alt="Image sur la recherche d'un travail" class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">Respectueux de l'environnement.</h5>
+                            <p class="card-text">La conception de nos ours en peluche respecte l'environnement.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-light mt-5">
+            <div class="container">
+                <div class="row pt-4 pb-3">
+                    <div class="col">
+                        <ul class="list-inline text-center">
+                            <li class="list-inline-item"><a href="#">À propos</a></li>
+                            <li class="list-inline-item">&middot;</li>
+                            <li class="list-inline-item"><a href="#">Mentions légales</a></li>
+                            <li class="list-inline-item">&middot;</li>
+                            <li class="list-inline-item"><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
