Début JavaScript, corrections HTML & CSS, suppressions fichiers inutiles

--- a/produits.html
+++ b/produits.html
@@ -54,59 +54,8 @@
                     <h1>Produits</h1>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12 col-lg-4">
-                    <div class="card mb-4 mb-lg-0 border-light shadow-sm">
-                        <img src="images/teddy_1.jpg" alt="Image du cours CSS" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Teddy 1</h5>
-                            <p class="card-text"></p>
-                            <a href="#" class="btn btn-primary stretched-link" role="button">Détails</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                    <div class="card mb-4 mb-lg-0 border-light shadow-sm">
-                        <img src="images/teddy_2.jpg" alt="Image du cours JavaScript" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Teddy 2</h5>
-                            <p class="card-text"></p>
-                            <a href="#" class="btn btn-primary stretched-link" role="button">Détails</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                    <div class="card mb-4 mb-lg-0 border-light shadow-sm">
-                        <img src="images/teddy_3.jpg" alt="Image du cours Swift" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Teddy 3</h5>
-                            <p class="card-text"></p>
-                            <a href="#" class="btn btn-primary stretched-link" role="button">Détails</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-lg-4">
-                    <div class="card mb-4 mb-lg-0 border-light shadow-sm">
-                        <img src="images/teddy_4.jpg" alt="Image du cours CSS" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Teddy 4</h5>
-                            <p class="card-text"></p>
-                            <a href="#" class="btn btn-primary stretched-link" role="button">Détails</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-lg-4">
-                    <div class="card mb-4 mb-lg-0 border-light shadow-sm">
-                        <img src="images/teddy_5.jpg" alt="Image du cours CSS" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Teddy 5</h5>
-                            <p class="card-text"></p>
-                            <a href="#" class="btn btn-primary stretched-link" role="button">Détails</a>
-                        </div>
-                    </div>
-                </div>
+            <div class="row" id="listeCartes">
+                <!--carte inséré en JS-->
             </div>
         </div>
         <div class="bg-light mt-5">
@@ -127,5 +76,6 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="test.js" async></script>
     </body>
 </html>
