Modification fichiers accès serveur, images libre de droit

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="row">
                 <div class="col-12 col-lg-4">
                     <div class="card mb-4 mb-lg-0 border-primary shadow">
-                        <img src="images/teddy_5.jpg" alt="image certification" class="card-img-top">
+                        <img src="images/card_1.jpg" alt="image certification" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Qualité</h5>
                             <p class="card-text">Chaque ours en peluche est d'une qualité sans pareil.</p>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="col-12 col-lg-4">
                     <div class="card mb-4 mb-lg-0 border-primary shadow">
-                        <img src="images/teddy_2.jpg" alt="Image d'instruction" class="card-img-top">
+                        <img src="images/card_2.jpg" alt="Image d'instruction" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Made in France</h5>
                             <p class="card-text">Des matières premières, jusqu'à la chaîne de production, tout se passe en France.</p>
@@ -92,7 +92,7 @@
                 </div>
                 <div class="col-12 col-lg-4">
                     <div class="card mb-4 mb-lg-0 border-primary shadow">
-                        <img src="images/teddy_4.jpg" alt="Image sur la recherche d'un travail" class="card-img-top">
+                        <img src="images/card_3.jpg" alt="Image sur la recherche d'un travail" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Respectueux de l'environnement.</h5>
                             <p class="card-text">La conception de nos ours en peluche respecte l'environnement.</p>
