--- a/index.html
+++ b/index.html
@@ -22,42 +22,49 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <header>
             <div class="container">
-                <a class="navbar-brand" href="index.html">
-                    <img src="images/logo.png" width="50" height="50" alt="Logo du site Oriteddy">
-                Oriteddy</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div id="navbarContent" class="collapse navbar-collapse">
-                    <ul class="navbar-nav">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Accueil</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="produits.html">Produits</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Album</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="panier.html">Panier</a>
-                        </li>
-                    </ul>
+                <div class="row">
+                    <a class="col text-center text-success text-decoration-none" href="index.html">
+                        <img src="images/logo.png" width="75" height="75" alt="Logo du site Oriteddy">
+                        <h1 class="mt-2">Oriteddy</h1>
+                    </a>
                 </div>
             </div>
-        </nav>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
+                <div class="container">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div id="navbarContent" class="collapse navbar-collapse">
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item active mx-3">
+                                <a class="nav-link text-success" href="index.html">Accueil</a>
+                            </li>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link text-success" href="produits.html">Produits</a>
+                            </li>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link text-success" href="album.html">Album</a>
+                            </li>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link text-success" href="panier.html">Panier</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
         <div class="container">
             <div class="row mb-4">
                 <div class="col">
                     <div id="carouselControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/carousel_1.jpg" class="d-block w-100" alt="Un ours en peluche dans l'herbe.">
+                              <img src="images/carousel/carousel_1.jpg" class="d-block w-100" alt="Un ours en peluche dans l'herbe.">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/carousel_2.jpg" class="d-block w-100" alt="Une ours en peluche sur le sol, dans le coin d'une fenêtre.">
+                              <img src="images/carousel/carousel_2.jpg" class="d-block w-100" alt="Une ours en peluche sur le sol, dans le coin d'une fenêtre.">
                            </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
@@ -73,8 +80,8 @@
             </div>
             <div class="row">
                 <div class="col-12 col-lg-4">
-                    <div class="card mb-4 mb-lg-0 border-primary shadow">
-                        <img src="images/card_1.jpg" alt="image certification" class="card-img-top">
+                    <div class="card mb-4 mb-lg-0 border-success shadow">
+                        <img src="images/card/card_1.jpg" alt="image certification" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Qualité</h5>
                             <p class="card-text">Chaque ours en peluche est d'une qualité sans pareil.</p>
@@ -82,8 +89,8 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4">
-                    <div class="card mb-4 mb-lg-0 border-primary shadow">
-                        <img src="images/card_2.jpg" alt="Image d'instruction" class="card-img-top">
+                    <div class="card mb-4 mb-lg-0 border-success shadow">
+                        <img src="images/card/card_2.jpg" alt="Image d'instruction" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Made in France</h5>
                             <p class="card-text">Des matières premières, jusqu'à la chaîne de production, tout se passe en France.</p>
@@ -91,8 +98,8 @@
                     </div>
                 </div>
                 <div class="col-12 col-lg-4">
-                    <div class="card mb-4 mb-lg-0 border-primary shadow">
-                        <img src="images/card_3.jpg" alt="Image sur la recherche d'un travail" class="card-img-top">
+                    <div class="card mb-4 mb-lg-0 border-success shadow">
+                        <img src="images/card/card_3.jpg" alt="Image sur la recherche d'un travail" class="card-img-top">
                         <div class="card-body">
                             <h5 class="card-title">Respectueux de l'environnement.</h5>
                             <p class="card-text">La conception de nos ours en peluche respecte l'environnement.</p>
@@ -101,21 +108,28 @@
                 </div>
             </div>
         </div>
-        <div class="bg-light mt-5">
-            <div class="container">
-                <div class="row pt-4 pb-3">
-                    <div class="col">
-                        <ul class="list-inline text-center">
-                            <li class="list-inline-item"><a href="#">À propos</a></li>
-                            <li class="list-inline-item">&middot;</li>
-                            <li class="list-inline-item"><a href="#">Mentions légales</a></li>
-                            <li class="list-inline-item">&middot;</li>
-                            <li class="list-inline-item"><a href="#">Contact</a></li>
+        <footer class="mt-5">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
+                <div class="container">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div id="navbarContent" class="collapse navbar-collapse">
+                        <ul class="navbar-nav mx-auto">
+                            <li class="nav-item active mx-3">
+                                <a class="nav-link text-success" href="index.html">À propos</a>
+                            </li>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link text-success" href="produits.html">Mentions légales</a>
+                            </li>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link text-success" href="album.html">Contact</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
-            </div>
-        </div>
+            </nav>
+        </footer>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
