Ajouts mentions légales, correction sémantique, suppression scripts inutiles, amélioration rendu visuel

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/style.css" />
         <!-- Primary Meta Tags -->
         <title>Oriteddy</title>
         <meta name="title" content="Oriteddy">
@@ -55,8 +56,8 @@
                 </div>
             </nav>
         </header>
-        <div class="container">
-            <div class="row mb-4">
+        <main class="container">
+            <section class="row mb-4">
                 <div class="col">
                     <div id="carouselControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
@@ -77,9 +78,9 @@
                         </a>
                      </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-lg-4">
+            </section>
+            <section class="row">
+                <article class="col-12 col-lg-4">
                     <div class="card mb-4 mb-lg-0 border-success shadow">
                         <img src="images/card/card_1.jpg" alt="image certification" class="card-img-top">
                         <div class="card-body">
@@ -87,8 +88,8 @@
                             <p class="card-text">Chaque ours en peluche est d'une qualité sans pareil.</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-lg-4">
+                </article>
+                <article class="col-12 col-lg-4">
                     <div class="card mb-4 mb-lg-0 border-success shadow">
                         <img src="images/card/card_2.jpg" alt="Image d'instruction" class="card-img-top">
                         <div class="card-body">
@@ -96,8 +97,8 @@
                             <p class="card-text">Des matières premières, jusqu'à la chaîne de production, tout se passe en France.</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-lg-4">
+                </article>
+                <article class="col-12 col-lg-4">
                     <div class="card mb-4 mb-lg-0 border-success shadow">
                         <img src="images/card/card_3.jpg" alt="Image sur la recherche d'un travail" class="card-img-top">
                         <div class="card-body">
@@ -105,9 +106,9 @@
                             <p class="card-text">La conception de nos ours en peluche respecte l'environnement.</p>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
+                </article>
+            </section>
+        </main>
         <footer class="mt-5">
             <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
                 <div class="container">
@@ -120,7 +121,7 @@
                                 <a class="nav-link text-success" href="index.html">À propos</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="produits.html">Mentions légales</a>
+                                <a class="nav-link text-success" href="mentions_legales.html">Mentions légales</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="album.html">Contact</a>
