--- a/produits.html
+++ b/produits.html
@@ -3,21 +3,22 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/style.css" />
         <!-- Primary Meta Tags -->
-        <title>Oriteddy</title>
+        <title>Oriteddy - Produits</title>
         <meta name="title" content="Oriteddy - Produits">
-        <meta name="description" content="Présentation de nos ours en peluche made in France, respectueux de l'environnement.">
+        <meta name="description" content="Présentation de l'ensemble des ours en peluche Oriteddy, made in France, respectueux de l'environnement.">
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://timotelancelle.com">
         <meta property="og:title" content="Oriteddy - Produits">
-        <meta property="og:description" content="Présentation de nos ours en peluche made in France, respectueux de l'environnement.">
+        <meta property="og:description" content="Présentation de l'ensemble des ours en peluche Oriteddy, made in France, respectueux de l'environnement.">
         <meta property="og:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://timotelancelle.com">
         <meta property="twitter:title" content="Oriteddy - Produits">
-        <meta property="twitter:description" content="Présentation de nos ours en peluche made in France, respectueux de l'environnement.">
+        <meta property="twitter:description" content="Présentation de l'ensemble des ours en peluche Oriteddy, made in France, respectueux de l'environnement.">
         <meta property="twitter:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
     </head>
 
@@ -38,10 +39,10 @@
                     </button>
                     <div id="navbarContent" class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
-                            <li class="nav-item active mx-3">
+                            <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="index.html">Accueil</a>
                             </li>
-                            <li class="nav-item mx-3">
+                            <li class="nav-item active mx-3">
                                 <a class="nav-link text-success" href="produits.html">Produits</a>
                             </li>
                             <li class="nav-item mx-3">
@@ -55,16 +56,11 @@
                 </div>
             </nav>
         </header>
-        <div class="container">
-            <div class="row my-3">
-                <div class="col text-center">
-                    <h2>Produits</h2>
-                </div>
-            </div>
-            <div class="row" id="listeCartes">
+        <main class="container">
+            <section class="row" id="listeCartes">
                 <!--carte inséré en JS-->
-            </div>
-        </div>
+            </section>
+        </main>
         <footer class="mt-5">
             <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
                 <div class="container">
@@ -77,7 +73,7 @@
                                 <a class="nav-link text-success" href="index.html">À propos</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="produits.html">Mentions légales</a>
+                                <a class="nav-link text-success" href="mentions_legales.html">Mentions légales</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="album.html">Contact</a>
@@ -87,9 +83,6 @@
                 </div>
             </nav>
         </footer>
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script src="test.js" async></script>
     </body>
 </html>
