--- a/album.html
+++ b/album.html
@@ -6,19 +6,19 @@
         <link rel="stylesheet" href="css/style.css" />
         <!-- Primary Meta Tags -->
         <title>Oriteddy - Produits</title>
-        <meta name="title" content="Oriteddy - Produits">
-        <meta name="description" content="Présentation de l'ensemble des ours en peluche Oriteddy, made in France, respectueux de l'environnement.">
+        <meta name="title" content="Oriteddy - Album">
+        <meta name="description" content="Découvrez sans plus attendre les photos des plus belles créations d'Oriteddy !">
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://timotelancelle.com">
-        <meta property="og:title" content="Oriteddy - Produits">
-        <meta property="og:description" content="Présentation de l'ensemble des ours en peluche Oriteddy, made in France, respectueux de l'environnement.">
+        <meta property="og:title" content="Oriteddy - Album">
+        <meta property="og:description" content="Découvrez sans plus attendre les photos des plus belles créations d'Oriteddy !">
         <meta property="og:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://timotelancelle.com">
-        <meta property="twitter:title" content="Oriteddy - Produits">
-        <meta property="twitter:description" content="Présentation de l'ensemble des ours en peluche Oriteddy, made in France, respectueux de l'environnement.">
+        <meta property="twitter:title" content="Oriteddy - Album">
+        <meta property="twitter:description" content="Découvrez sans plus attendre les photos des plus belles créations d'Oriteddy !">
         <meta property="twitter:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
     </head>
 
@@ -43,10 +43,10 @@
                                 <a class="nav-link text-success" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link active text-success" href="produits.html">Produits</a>
+                                <a class="nav-link text-success" href="produits.html">Produits</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="album.html">Album</a>
+                                <a class="nav-link active text-success" href="album.html">Album</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="panier.html">Panier</a>
@@ -57,8 +57,8 @@
             </nav>
         </header>
         <main class="container">
-            <section class="row" id="listeCartes">
-                <!--carte inséré en JS-->
+            <section class="row">
+                
             </section>
         </main>
         <footer class="mt-5">
@@ -83,6 +83,5 @@
                 </div>
             </nav>
         </footer>
-        <script src="test.js" async></script>
     </body>
 </html>
