--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     </button>
                     <div id="navbarContent" class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
-                            <li class="nav-item active mx-3">
-                                <a class="nav-link text-success" href="index.html">Accueil</a>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link active text-success" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="produits.html">Produits</a>
@@ -117,14 +117,14 @@
                     </button>
                     <div id="navbarContent" class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
-                            <li class="nav-item active mx-3">
-                                <a class="nav-link text-success" href="index.html">À propos</a>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link text-success" href="propos.html">À propos</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="mentions_legales.html">Mentions légales</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="album.html">Contact</a>
+                                <a class="nav-link text-success" href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
