--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -39,7 +39,7 @@
                     </button>
                     <div id="navbarContent" class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
-                            <li class="nav-item active mx-3">
+                            <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item mx-3">
@@ -128,14 +128,14 @@
                     </button>
                     <div id="navbarContent" class="collapse navbar-collapse">
                         <ul class="navbar-nav mx-auto">
+                            <li class="nav-item mx-3">
+                                <a class="nav-link text-success" href="propos.html">À propos</a>
+                            </li>
+                            <li class="nav-item mx-3">
+                                <a class="nav-link active text-success" href="mentions_legales.html">Mentions légales</a>
+                            </li>
                             <li class="nav-item active mx-3">
-                                <a class="nav-link text-success" href="index.html">À propos</a>
-                            </li>
-                            <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="mentions_legales.html">Mentions légales</a>
-                            </li>
-                            <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="album.html">Contact</a>
+                                <a class="nav-link text-success" href="contact.html">Contact</a>
                             </li>
                         </ul>
                     </div>
