Correction problème déploiement nav, correction taille cards, mise à jour album

--- a/album.html
+++ b/album.html
@@ -57,9 +57,49 @@
             </nav>
         </header>
         <main class="container">
-            <section class="row">
-                
-            </section>
+            <div class="card-deck">
+                <div class="row mb-4">
+                    <div class="card border-success shadow">
+                        <img src="images/album/album_1.jpg" alt="Photo d'un ours en peluche, posé assis sur l'herbe." class="card-img-top">
+                    </div>
+                    <div class="card border-success shadow">
+                        <img src="images/album/album_2.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                    </div>
+                    <div class="card border-success shadow">
+                        <img src="images/album/album_3.jpg" alt="Photo d'un ours en peluche, posé allongé sur l'herbe." class="card-img-top">
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="card border-success shadow">
+                        <img src="images/album/album_4.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                    </div>
+                    <div class="card border-success shadow">
+                        <img src="images/album/album_5.jpg" alt="Photo d'un ours en peluche, posé assis sur l'herbe." class="card-img-top">
+                    </div>
+                    <div class="card border-success shadow">
+                        <img src="images/album/album_6.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol, avec des coeurs en peluche." class="card-img-top">
+                    </div>
+                </div>
+                <div class="row mb-4">
+                    <div class="card border-success shadow">
+                        <img src="images/album/album_7.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                    </div>
+                    <div class="card border-success shadow">
+                        <img src="images/album/album_8.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur du bois." class="card-img-top">
+                    </div>
+                    <div class="card border-success shadow">
+                        <img src="images/album/album_9.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol." class="card-img-top">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="card border-success shadow">
+                        <img src="images/album/album_10.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol, avec des cadeaux." class="card-img-top">
+                    </div>
+                    <div class="card border-success shadow">
+                        <img src="images/album/album_11.jpg" alt="Photo d'un ours en peluche, posé assis sur le sol." class="card-img-top">
+                    </div>
+                </div>
+            </div>
         </main>
         <footer class="mt-5">
             <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
@@ -83,5 +123,8 @@
                 </div>
             </nav>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </body>
 </html>
