--- a/mentions_legales.html
+++ b/mentions_legales.html
@@ -57,8 +57,8 @@
             </nav>
         </header>
         <main class="container">
-            <section class="row">
-                <div class="col text-center">
+            <section>
+                <div class="text-center">
                     <h2>Informations légales</h2>
                     <h3>1. Présentation du site.</h3>
                     <p>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé aux utilisateurs du site <a href="http://www.orinoco.com/">www.orinoco.com</a> l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :</p>
@@ -142,5 +142,8 @@
                 </div>
             </nav>
         </footer>
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </body>
 </html>
