--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
             </nav>
         </header>
         <main class="container">
-            <section class="row mb-4">
+            <div class="row mb-4">
                 <div class="col">
                     <div id="carouselControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                            <div class="carousel-item active">
-                              <img src="images/carousel/carousel_1.jpg" class="d-block w-100" alt="Un ours en peluche dans l'herbe.">
+                              <img src="images/carousel/carousel_1.jpg" class="d-block w-100" alt="Photo d'un ours en peluche, posé assis dehors sur le sol.">
                            </div>
                            <div class="carousel-item">
-                              <img src="images/carousel/carousel_2.jpg" class="d-block w-100" alt="Une ours en peluche sur le sol, dans le coin d'une fenêtre.">
+                              <img src="images/carousel/carousel_2.jpg" class="d-block w-100" alt="Photo de deux ours en peluche, dehors sur un canapé, un assis et un allongé.">
                            </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
@@ -78,36 +78,30 @@
                         </a>
                      </div>
                 </div>
-            </section>
-            <section class="row">
-                <article class="col-12 col-lg-4">
-                    <div class="card mb-4 mb-lg-0 border-success shadow">
-                        <img src="images/card/card_1.jpg" alt="image certification" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Qualité</h5>
-                            <p class="card-text">Chaque ours en peluche est d'une qualité sans pareil.</p>
-                        </div>
+            </div>
+            <div class="card-deck">
+                <section class="card border-success shadow">
+                    <img src="images/card/card_1.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Qualité</h5>
+                        <p class="card-text">Chaque ours en peluche est d'une qualité sans pareil.</p>
                     </div>
-                </article>
-                <article class="col-12 col-lg-4">
-                    <div class="card mb-4 mb-lg-0 border-success shadow">
-                        <img src="images/card/card_2.jpg" alt="Image d'instruction" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Made in France</h5>
-                            <p class="card-text">Des matières premières, jusqu'à la chaîne de production, tout se passe en France.</p>
-                        </div>
+                </section>
+                <section class="card border-success shadow">
+                    <img src="images/card/card_2.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur une planche en hauteur." class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Made in France</h5>
+                        <p class="card-text">Des matières premières, jusqu'à la chaîne de production, tout se passe en France.</p>
                     </div>
-                </article>
-                <article class="col-12 col-lg-4">
-                    <div class="card mb-4 mb-lg-0 border-success shadow">
-                        <img src="images/card/card_3.jpg" alt="Image sur la recherche d'un travail" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Respectueux de l'environnement.</h5>
-                            <p class="card-text">La conception de nos ours en peluche respecte l'environnement.</p>
-                        </div>
+                </section>
+                <section class="card border-success shadow">
+                    <img src="images/card/card_3.jpg" alt="Photo d'un ours en peluche posé assis sur l'herbe." class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Respectueux de l'environnement.</h5>
+                        <p class="card-text">La conception de nos ours en peluche respecte l'environnement.</p>
                     </div>
-                </article>
-            </section>
+                </section>
+            </div>
         </main>
         <footer class="mt-5">
             <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
