Mise à jour page contact, et JS produits

--- a/contact.html
+++ b/contact.html
@@ -57,8 +57,13 @@
             </nav>
         </header>
         <main class="container">
-            <section class="row">
-
+            <section>
+                <ul class="list-group text-center">
+                    <li class="list-group-item">Adresse : 12 avenue arsset, 67100 STRASBOURG, France</li>
+                    <li class="list-group-item">Téléphone : <a href="tel:+33492870032">04 92 87 00 32</a></li>
+                    <li class="list-group-item">Mail : <a href="mailto:contact@orinoco.com">contact@orinoco.com</a></li>
+                    <li class="list-group-item">Site : <a href="https://www.orinoco.com">www.orinoco.com</a></li>
+                </ul>
             </section>
         </main>
         <footer class="mt-5">
