--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
                                 <a class="nav-link text-success" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="produits.html">Produits</a>
+                                <a class="nav-link text-success" href="informations_produits.html">Informations produits</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="album.html">Album</a>
