--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                 <a class="nav-link active text-success" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="produits.html">Produits</a>
+                                <a class="nav-link text-success" href="informations_produits.html">Informations produits</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="album.html">Album</a>
@@ -79,28 +79,8 @@
                      </div>
                 </div>
             </div>
-            <div class="card-deck">
-                <section class="card border-success shadow">
-                    <img src="images/card/card_1.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Qualité</h5>
-                        <p class="card-text">Chaque ours en peluche est d'une qualité sans pareil.</p>
-                    </div>
-                </section>
-                <section class="card border-success shadow">
-                    <img src="images/card/card_2.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur une planche en hauteur." class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Made in France</h5>
-                        <p class="card-text">Des matières premières, jusqu'à la chaîne de production, tout se passe en France.</p>
-                    </div>
-                </section>
-                <section class="card border-success shadow">
-                    <img src="images/card/card_3.jpg" alt="Photo d'un ours en peluche posé assis sur l'herbe." class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Respectueux de l'environnement.</h5>
-                        <p class="card-text">La conception de nos ours en peluche respecte l'environnement.</p>
-                    </div>
-                </section>
+            <div class="row" id="listeCartes">
+                <!--carte inséré en JS-->
             </div>
         </main>
         <footer class="mt-5">
@@ -128,5 +108,6 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    </body>
+        <script src="produits.js" async></script>
+</body>
 </html>
