--- a/informations_produits.html
+++ b/informations_produits.html
@@ -43,7 +43,7 @@
                                 <a class="nav-link text-success" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link active text-success" href="produits.html">Produits</a>
+                                <a class="nav-link text-success" href="informations_produits.html">Informations produits</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="album.html">Album</a>
@@ -57,9 +57,29 @@
             </nav>
         </header>
         <main class="container">
-            <section class="row" id="listeCartes">
-                <!--carte inséré en JS-->
-            </section>
+            <div class="card-deck">
+                <section class="card border-success shadow mb-2">
+                    <img src="images/card/card_1.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur le sol." class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Qualité</h5>
+                        <p class="card-text">Chaque ours en peluche est d'une qualité sans pareil.</p>
+                    </div>
+                </section>
+                <section class="card border-success shadow mb-2">
+                    <img src="images/card/card_2.jpg" alt="Photo d'un ours en peluche, posé assis dehors sur une planche en hauteur." class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Made in France</h5>
+                        <p class="card-text">Des matières premières, jusqu'à la chaîne de production, tout se passe en France.</p>
+                    </div>
+                </section>
+                <section class="card border-success shadow mb-2">
+                    <img src="images/card/card_3.jpg" alt="Photo d'un ours en peluche posé assis sur l'herbe." class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Respectueux de l'environnement.</h5>
+                        <p class="card-text">La conception de nos ours en peluche respecte l'environnement.</p>
+                    </div>
+                </section>
+            </div>
         </main>
         <footer>
             <nav class="navbar navbar-expand-lg navbar-light bg-light my-4 py-3">
