--- a/produit.html
+++ b/produit.html
@@ -43,7 +43,7 @@
                                 <a class="nav-link text-success" href="index.html">Accueil</a>
                             </li>
                             <li class="nav-item mx-3">
-                                <a class="nav-link text-success" href="produits.html">Produits</a>
+                                <a class="nav-link text-success" href="informations_produits.html">Informations produits</a>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="nav-link text-success" href="album.html">Album</a>
@@ -58,8 +58,20 @@
         </header>
         <main class="container">
             <section class="row">
-                <h2 id="name"></h2>
-                <p id="description"></p>
+                <div class="col">
+                    <img src='' alt="Photo ours en peluche" id="image" class="w-75 d-block mx-auto border border-success shadow">
+                </div>
+                <div class="col">
+                    <h2 id="name"></h2>
+                    <p id="description"></p>
+                    <select class="form-select">
+                        <option selected>Choix de la couleur</option>
+                        <option id="colors"></option>
+                    </select>
+                    <p id="price"></p>
+                    <a class="btn btn-success" role="button">Ajouter au panier</a>
+                    <a href="index.html" class="btn btn-success" role="button">Retour en arrière</a>
+                </div>
             </section>
         </main>
         <footer class="mt-5">
