Ajout fonction JS choix couleur produit

--- a/produit.html
+++ b/produit.html
@@ -64,9 +64,8 @@
                 <div class="col">
                     <h2 id="name"></h2>
                     <p id="description"></p>
-                    <select class="form-select">
+                    <select id="selectColor" class="form-select">
                         <option selected>Choix de la couleur</option>
-                        <option id="colors"></option>
                     </select>
                     <p id="price"></p>
                     <a class="btn btn-success" role="button">Ajouter au panier</a>
