Récupération produits local storage, séparation serveur / projet

--- a/produit.html
+++ b/produit.html
@@ -59,13 +59,13 @@
         <main class="container">
             <section class="row">
                 <div class="col">
-                    <img src='' alt="Photo ours en peluche" id="image" class="w-75 d-block mx-auto border border-success shadow">
+                    <img src='' alt="Photo ours en peluche" id="picture" class="w-75 d-block mx-auto border border-success shadow">
                 </div>
                 <div class="col">
                     <h2 id="name"></h2>
                     <p id="description"></p>
                     <select id="selectColor" class="form-select">
-                        <option selected>Choix de la couleur</option>
+                        <option>Choix de la couleur</option>
                     </select>
                     <p id="price"></p>
                     <a id="add_to_cart" class="btn btn-success" role="button">Ajouter au panier</a>
@@ -98,6 +98,6 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <script src="produit.js" async></script>
+        <script src="js/produit.js" async></script>
     </body>
 </html>
