--- a/informations_produits.html
+++ b/informations_produits.html
@@ -6,18 +6,18 @@
         <link rel="stylesheet" href="css/style.css" />
         <!-- Primary Meta Tags -->
         <title>Oriteddy - Produits</title>
-        <meta name="title" content="Oriteddy - Produits">
+        <meta name="title" content="Oriteddy - Informations produits">
         <meta name="description" content="Présentation de l'ensemble des ours en peluche Oriteddy, made in France, respectueux de l'environnement.">
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://timotelancelle.com">
-        <meta property="og:title" content="Oriteddy - Produits">
+        <meta property="og:title" content="Oriteddy - Informations produits">
         <meta property="og:description" content="Présentation de l'ensemble des ours en peluche Oriteddy, made in France, respectueux de l'environnement.">
         <meta property="og:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://timotelancelle.com">
-        <meta property="twitter:title" content="Oriteddy - Produits">
+        <meta property="twitter:title" content="Oriteddy - Informations produits">
         <meta property="twitter:description" content="Présentation de l'ensemble des ours en peluche Oriteddy, made in France, respectueux de l'environnement.">
         <meta property="twitter:image" content="https://zupimages.net/viewer.php?id=20/31/k38o.jpg">
     </head>
@@ -106,6 +106,5 @@
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <script src="produits.js" async></script>
     </body>
 </html>
